Domain search markup and SCSS

--- a/index.html
+++ b/index.html
@@ -83,7 +83,24 @@
       </div>
     </section>
 
+    <section class="domain-search">
+      <div class="row">
+        <div class="columns large-6 medium-6">
+          <form class="domain-form">
+            <div class="input-group">
+              <span class="input-group-label">Find a Domain</span>
+              <input class="input-group-field" type="text" placeholder="Search for .com, .net, .org">
+              <div class="input-group-button">
+                <input type="submit" class="button" value="Submit">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="columns large-6 medium-6">
 
+        </div>
+      </div>
+    </section>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/dist/what-input.js"></script>
