--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> <!-- END top-nav -->
 
     <div class="top-bar">
       <div class="row">
@@ -42,11 +42,11 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> <!-- END top-bar -->
 
     <section class="showcase">
       <div class="row">
-        <div class="columns large-5 medium-5 large-offset-1 medium-offset-1">
+        <div class="small-10 medium-8 large-5 large-offset-1 medium-offset-1 columns">
           <div class="showcase-box">
             <h3>Fast, Secure, Reliable</h3>
             <p>Powerful shared hosting on enterprise hardware.</p>
@@ -81,11 +81,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> <!-- END showcase -->
 
     <section class="domain-search">
       <div class="row">
-        <div class="columns large-6 medium-6">
+        <div class="columns large-12 medium-12">
           <form class="domain-form">
             <div class="input-group">
               <span class="input-group-label">Find a Domain</span>
@@ -96,8 +96,180 @@
             </div>
           </form>
         </div>
-        <div class="columns large-6 medium-6">
+      </div>
+    </section> <!-- END domain-search -->
 
+    <section class="home-packages row">
+      <div class="columns large-12 medium-12">
+        <h2 class="text-center">Hosting Packages For Everyone</h2>
+        <p class="lead text-center">We have hosting packages for individuals and businesses of all types</p>
+        <br>
+        <ul class="tabs" id="package-tabs" data-tabs>
+          <li class="tabs-title is-active"><a href="#shared" aria-selected="true">Shared Hosting</a></li>
+          <li class="tabs-title"><a href="#vps">Cloud VPS</a></li>
+          <li class="tabs-title"><a href="#dedicated">Dedicated Servers</a></li>
+        </ul>
+
+        <div class="tabs-content" data-tabs-content="package-tabs">
+          <div class="tabs-panel is-active" id="shared">
+            <div class="row">
+
+              <div class="medium-4 large-4 columns">
+                <div class="callout p-box-1">
+                  <h3>Simple Shared</h3>
+                  <p>Great for small & simple sites</p>
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <ul class="features menu vertical">
+                    <li>25GB SSD Storage</li>
+                    <li>100GB Data Transfer</li>
+                    <li>10 Email Accounts</li>
+                    <li>1 Domain Name</li>
+                  </ul>
+                  <div class="pricing"><span>$9.99</span>/Month</div>
+                  <a href="" class="button large expanded">GET IT NOW</a>
+                </div>
+              </div>
+
+              <div class="medium-4 large-4 columns">
+                <div class="callout p-box-2">
+                  <h3>Standard Shared</h3>
+                  <p>Great for medium sized sites</p>
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <ul class="features menu vertical">
+                    <li>100GB SSD Storage</li>
+                    <li>500GB Data Transfer</li>
+                    <li>50 Email Accounts</li>
+                    <li>5 Domain Names</li>
+                  </ul>
+                  <div class="pricing"><span>$19.99</span>/Month</div>
+                  <a href="" class="button large expanded secondary">GET IT NOW</a>
+                </div>
+              </div>
+
+              <div class="medium-4 large-4 columns">
+                <div class="callout p-box-3">
+                  <h3>Super Shared</h3>
+                  <p>Great for enterprise sites & apps</p>
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <ul class="features menu vertical">
+                    <li>500GB SSD Storage</li>
+                    <li>1T Data Transfer</li>
+                    <li>Unlimited Email Accounts</li>
+                    <li>Unlimited Domain Names</li>
+                  </ul>
+                  <div class="pricing"><span>$29.99</span>/Month</div>
+                  <a href="" class="button large expanded extra">GET IT NOW</a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="tabs-panel" id="vps">
+            <div class="row">
+
+              <div class="medium-4 large-4 columns">
+                <div class="callout p-box-1">
+                  <h3>Simple VPS</h3>
+                  <p>Great for small & simple sites</p>
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <ul class="features menu vertical">
+                    <li>25GB SSD Storage</li>
+                    <li>100GB Data Transfer</li>
+                    <li>10 Email Accounts</li>
+                    <li>1 Domain Name</li>
+                  </ul>
+                  <div class="pricing"><span>$19.99</span>/Month</div>
+                  <a href="" class="button large expanded">GET IT NOW</a>
+                </div>
+              </div>
+
+              <div class="medium-4 large-4 columns">
+                <div class="callout p-box-2">
+                  <h3>Standard VPS</h3>
+                  <p>Great for medium sized sites</p>
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <ul class="features menu vertical">
+                    <li>100GB SSD Storage</li>
+                    <li>500GB Data Transfer</li>
+                    <li>50 Email Accounts</li>
+                    <li>5 Domain Names</li>
+                  </ul>
+                  <div class="pricing"><span>$29.99</span>/Month</div>
+                  <a href="" class="button large expanded secondary">GET IT NOW</a>
+                </div>
+              </div>
+
+              <div class="medium-4 large-4 columns">
+                <div class="callout p-box-3">
+                  <h3>Super VPS</h3>
+                  <p>Great for enterprise sites & apps</p>
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <ul class="features menu vertical">
+                    <li>500GB SSD Storage</li>
+                    <li>1T Data Transfer</li>
+                    <li>Unlimited Email Accounts</li>
+                    <li>Unlimited Domain Names</li>
+                  </ul>
+                  <div class="pricing"><span>$39.99</span>/Month</div>
+                  <a href="" class="button large expanded extra">GET IT NOW</a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="tabs-panel" id="dedicated">
+            <div class="row">
+
+              <div class="medium-4 large-4 columns">
+                <div class="callout p-box-1">
+                  <h3>Simple Dedicated</h3>
+                  <p>Great for small & simple sites</p>
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <ul class="features menu vertical">
+                    <li>25GB SSD Storage</li>
+                    <li>100GB Data Transfer</li>
+                    <li>10 Email Accounts</li>
+                    <li>1 Domain Name</li>
+                  </ul>
+                  <div class="pricing"><span>$39.99</span>/Month</div>
+                  <a href="" class="button large expanded">GET IT NOW</a>
+                </div>
+              </div>
+
+              <div class="medium-4 large-4 columns">
+                <div class="callout p-box-2">
+                  <h3>Standard Dedicated</h3>
+                  <p>Great for medium sized sites</p>
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <ul class="features menu vertical">
+                    <li>100GB SSD Storage</li>
+                    <li>500GB Data Transfer</li>
+                    <li>50 Email Accounts</li>
+                    <li>5 Domain Names</li>
+                  </ul>
+                  <div class="pricing"><span>$49.99</span>/Month</div>
+                  <a href="" class="button large expanded secondary">GET IT NOW</a>
+                </div>
+              </div>
+
+              <div class="medium-4 large-4 columns">
+                <div class="callout p-box-3">
+                  <h3>Super Dedicated</h3>
+                  <p>Great for enterprise sites & apps</p>
+                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <ul class="features menu vertical">
+                    <li>500GB SSD Storage</li>
+                    <li>1T Data Transfer</li>
+                    <li>Unlimited Email Accounts</li>
+                    <li>Unlimited Domain Names</li>
+                  </ul>
+                  <div class="pricing"><span>$59.99</span>/Month</div>
+                  <a href="" class="button large expanded extra">GET IT NOW</a>
+                </div>
+              </div>
+
+            </div>
+          </div>
         </div>
       </div>
     </section>
