- Readme - Added div comments

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
         <div class="tabs-content" data-tabs-content="package-tabs">
           <div class="tabs-panel is-active" id="shared">
+
             <div class="row">
 
               <div class="medium-4 large-4 columns">
@@ -163,7 +164,8 @@
               </div>
 
             </div>
-          </div>
+          </div> <!-- END shared -->
+
           <div class="tabs-panel" id="vps">
             <div class="row">
 
@@ -216,7 +218,8 @@
               </div>
 
             </div>
-          </div>
+          </div> <!-- END vps -->
+
           <div class="tabs-panel" id="dedicated">
             <div class="row">
 
@@ -269,10 +272,11 @@
               </div>
 
             </div>
-          </div>
+          </div> <!-- END dedicated -->
+
         </div>
       </div>
-    </section>
+    </section> <!-- END home-packages -->
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/dist/what-input.js"></script>
