- sections a, b and c - footer

--- a/index.html
+++ b/index.html
@@ -278,6 +278,79 @@
       </div>
     </section> <!-- END home-packages -->
 
+    <section class="section-a">
+      <div class="row">
+        <div class="large-6 columns">
+          <img src="img/server.png" alt="server">
+        </div>
+        <div class="large-6 columns">
+          <h2>How Are We Different</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, ipsam. Tenetur, qui consequatur quam molestias illum cum ullam, repellat deserunt.</p>
+          <a href="about.html" class="button large hollow">Read More</a>
+        </div>
+      </div>
+    </section> <!-- END section-a -->
+
+    <section class="section-b">
+      <h1>A truly reliable web hosting company</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro ut nostrum.</p>
+    </section> <!-- END section-b -->
+
+    <section class="section-c">
+      <div class="row">
+        <div class="large-3 columns">
+          <i class="fa fa-shield" aria-hidden="true"></i>
+          <h4>Secure</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        </div>
+        <div class="large-3 columns">
+          <i class="fa fa-flash" aria-hidden="true"></i>
+          <h4>Fast</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        </div>
+        <div class="large-3 columns">
+          <i class="fa fa-gears" aria-hidden="true"></i>
+          <h4>Stable</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        </div>
+        <div class="large-3 columns">
+          <i class="fa fa-user" aria-hidden="true"></i>
+          <h4>Reliable</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        </div>
+      </div>
+    </section> <!-- END section-c -->
+
+    <footer>
+      <div class="row">
+        <div class="large-3 columns">
+          <p>MCHosting &copy; copyright 2017</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, rem.</p>
+        </div>
+        <div class="large-3 columns">
+          <h5>Company</h5>
+          <ul class="menu vertical">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Site Map</a></li>
+          </ul>
+        </div>
+        <div class="large-3 columns">
+          <h5>Support</h5>
+          <ul class="menu vertical">
+            <li><a href="#">Knowledgebase</a></li>
+            <li><a href="#">Support Forum</a></li>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">Ticket System</a></li>
+          </ul>
+        </div>
+        <div class="large-3 columns">
+          <img src="img/truste-seal.png" alt="truste seal">
+        </div>
+      </div>
+    </footer>
+
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/dist/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
